feat: adds attendant tip
