# app/rest/docs/swagger.json
@@ -602,6 +602,15 @@
                         "name": "guest_check_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "JSON body for pay a guest check",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/rest.PayGuestCheckRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -819,6 +828,14 @@
             "properties": {
                 "id": {
                     "type": "string"
+                }
+            }
+        },
+        "rest.PayGuestCheckRequest": {
+            "type": "object",
+            "properties": {
+                "tip": {
+                    "type": "number"
                 }
             }
         },
